<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ContactUs">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:id="@+id/phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneno"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="-160dp"
        android:text="@string/_6478386399" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailfield"
        android:text="@string/email"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_below="@+id/phoneno"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailfield"
        android:layout_marginTop="80dp"
        android:layout_marginRight="-147dp"
        android:text="info@wintec.ac.nz" />

    <TextView
        android:id="@+id/addressfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailfield"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/addressfield"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignRight="@+id/addressfield"
        android:layout_marginTop="38dp"
        android:layout_marginRight="-285dp"
        android:text="A Block, Gate 3, Tristram Street, Hamilton" />


</RelativeLayout>